--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".ActivityMain"
+            android:name=".ActivityPersonList"
             android:configChanges="orientation|keyboardHidden|screenSize">
 
             <intent-filter>
@@ -22,6 +22,10 @@
             </intent-filter>
 
         </activity>
+
+        <activity
+            android:name=".ActivityEntryList"
+            android:configChanges="orientation|keyboardHidden|screenSize" />
 
     </application>
 
