--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
 
         <activity
             android:name=".ActivityPersonList"
+            android:screenOrientation="portrait"
             android:configChanges="orientation|keyboardHidden|screenSize">
 
             <intent-filter>
@@ -25,6 +26,7 @@
 
         <activity
             android:name=".ActivityEntryList"
+            android:screenOrientation="portrait"
             android:configChanges="orientation|keyboardHidden|screenSize" />
 
     </application>
