--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.art_project">
 
     <application
@@ -14,7 +15,8 @@
         <activity
             android:name=".ActivityLaunch"
             android:configChanges="orientation|keyboardHidden|screenSize|locale"
-            android:screenOrientation="fullSensor">
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -27,17 +29,20 @@
         <activity
             android:name=".ActivityPersons"
             android:configChanges="orientation|keyboardHidden|screenSize|locale"
-            android:screenOrientation="fullSensor"/>
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity" />
 
         <activity
             android:name=".ActivityEntries"
             android:configChanges="orientation|keyboardHidden|screenSize|locale"
-            android:screenOrientation="fullSensor" />
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity" />
 
         <activity
             android:name=".ActivitySettings"
             android:configChanges="orientation|keyboardHidden|screenSize|locale"
-            android:screenOrientation="fullSensor" />
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity" />
 
     </application>
 
