--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,5 +34,8 @@ dependencies {
     implementation 'it.xabaras.android:recyclerview-swipedecorator:1.2.3'
     implementation 'com.chauthai.swipereveallayout:swipe-reveal-layout:1.4.1'
 
+    implementation 'com.rengwuxian.materialedittext:library:2.1.4'
+
+
     implementation 'net.steamcrafted:materialiconlib:1.1.5'
 }
